--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,79 @@ $font-family_1: "Inter", sans-serif;
         display: flex;
         flex-direction: column;
         align-items: center;
+        &__title {
+            font-weight: 700;
+            font-size: 40px;
+            line-height: 48px;
+            color: #FFFFFF;
+            margin: 60px 0 8px 0;
+        }
+        &__subtitle {
+            font-weight: 500;
+            font-size: 14px;
+            color: #5887FF;
+            margin-bottom: 24px;
+        }
+        .inputs-container {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            .input-container {
+                display: flex;
+                flex-direction: column;
+                &__text {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                }
+                &__title {
+                    font-weight: 500;
+                    font-size: 10px;
+                    color: #FFFFFF;
+                }
+                &__temp {
+                    font-weight: 700;
+                    font-size: 16px;
+                    line-height: 19px;
+                    color: #5887FF;
+                }
+                &__inputs {
+                    display: flex;
+                    justify-content: center;
+                    background: rgba(255, 255, 255, 0.4);
+                    backdrop-filter: blur(9px);
+                    border-radius: 110px;
+                    padding: 12px 20px;
+                    height: 30px;
+                    margin: 10px 0;
+                    input {
+                        -webkit-appearance: none;
+                        appearance: none;
+                        background: transparent;
+                        width: 140px;
+                        &::-webkit-slider-runnable-track {
+                            background: #DBE5FF;
+                            height: 2px;
+                          }
+                        &::-moz-range-track {
+                            background: #DBE5FF;
+                            height: 2px;
+                          }
+                        &::-webkit-slider-thumb {
+                            -webkit-appearance: none;
+                            width: 16px;
+                            height: 16px;
+                            background-color: 
+                            #5887FF;
+                            border-radius: 50%;
+                            margin-top: -7px;
+                        }
+                    }
+                
+            }
+            }
+
+        }
        .weather-card {
             width: 100%;
             display: flex;
@@ -30,7 +103,7 @@ $font-family_1: "Inter", sans-serif;
             background-color: rgba(255, 255, 255, 0.4);
             backdrop-filter: blur(9px);
             border-radius: 20px;
-            margin: 20px;
+            margin: 10px;
             padding: 20px;
             &__icon-date {
                 display: flex;
