--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,8 @@ $font-family_1: "Inter", sans-serif;
                     font-weight: 500;
                     font-size: 10px;
                     color: #FFFFFF;
+                    text-transform: uppercase;
+                    
                 }
                 &__temp {
                     font-weight: 700;
