--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 $font-family_1: "Inter", sans-serif;
+$main-color: #5887FF;
+$second-color : #323232;
 
 
 * {
@@ -21,6 +23,7 @@ $font-family_1: "Inter", sans-serif;
         display: flex;
         flex-direction: column;
         align-items: center;
+
         &__title {
             font-weight: 700;
             font-size: 40px;
@@ -28,37 +31,43 @@ $font-family_1: "Inter", sans-serif;
             color: #FFFFFF;
             margin: 60px 0 8px 0;
         }
+
         &__subtitle {
             font-weight: 500;
             font-size: 14px;
-            color: #5887FF;
+            color: $main-color;
             margin-bottom: 24px;
         }
+
         .inputs-container {
             width: 100%;
             display: flex;
             justify-content: space-between;
-            .input-container {
+
+            .temperature-input-container {
                 display: flex;
                 flex-direction: column;
+
                 &__text {
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
                 }
+
                 &__title {
                     font-weight: 500;
                     font-size: 10px;
                     color: #FFFFFF;
                     text-transform: uppercase;
-                    
                 }
+
                 &__temp {
                     font-weight: 700;
                     font-size: 16px;
                     line-height: 19px;
-                    color: #5887FF;
+                    color: $main-color;
                 }
+
                 &__inputs {
                     display: flex;
                     justify-content: center;
@@ -68,6 +77,7 @@ $font-family_1: "Inter", sans-serif;
                     padding: 12px 20px;
                     height: 30px;
                     margin: 10px 0;
+
                     input {
                         -webkit-appearance: none;
                         appearance: none;
@@ -85,17 +95,15 @@ $font-family_1: "Inter", sans-serif;
                             -webkit-appearance: none;
                             width: 16px;
                             height: 16px;
-                            background-color: 
-                            #5887FF;
+                            background-color: $main-color;
                             border-radius: 50%;
                             margin-top: -7px;
                         }
                     }
-                
+                }
             }
-            }
-
         }
+
        .weather-card {
             width: 100%;
             display: flex;
@@ -107,8 +115,10 @@ $font-family_1: "Inter", sans-serif;
             border-radius: 20px;
             margin: 10px;
             padding: 20px;
+
             &__icon-date {
                 display: flex;
+
                 img {
                     width: 60px;
                     height: 60px;
@@ -117,57 +127,67 @@ $font-family_1: "Inter", sans-serif;
 
                 }
             }
+
             &__date {
                 font-style: normal;
                 font-weight: 700;
+
                 p {
                     font-size: 16px;
                     line-height: 19px;
-                    color: #323232;
+                    color: $second-color;
+
                     &:nth-child(even){
                         font-size: 30px;
                         line-height: 36px;
                     }
                 }
             }
+
             &__temp {
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: flex-end;
                 align-items: center;
+
                 p {
                     width: 45%;
                     font-style: normal;
+
                     &:nth-child(even) {
-                        color: #5887FF;
+                        color: $main-color;
                         font-weight: 700;
                         text-align: end;
                         font-size: 16px;
                         padding: 4px 0;
                     }
+
                     &:nth-child(odd) {
                         font-weight: 500;
                         font-size: 10px;
                         line-height: 12px;
-                        color: #323232;
+                        color: $second-color;
                     }
                 }
             }
         }
+
         &__average {
             font-weight: 700;
             font-size: 13px;
-            color: #323232;
+            color: $second-color;
             align-self: flex-start;
             margin-top: 15px;
         }
+
         .buttons-container {
             width: 100%;
             display: flex;
             justify-content: space-between;
-            button {
+
+            &__button {
                 all: unset;
-                background-color: transparent;
+                cursor: pointer;
                 font-weight: 700;
                 font-size: 16px;
                 line-height: 19px;
@@ -176,34 +196,31 @@ $font-family_1: "Inter", sans-serif;
                 margin: 24px 0 40px 0;
             }
 
-
-            &__previous {
-                    opacity: 0.3 !important;
-                
+            &__button--opacity {
+                    opacity: 0.3;
+                    cursor: auto;
             }
-            &__next {
-                opacity: 0.3 !important;
-            
         }
-        }
-
     }
 }
+
+
 @media screen and (max-width: 450px) {
     .app {
         .weather-container {
             min-width: 90%;
             width: 90%;
+            
             &__title {
                 font-size: 36px;
             }
-            .inputs-container {
 
-                .input-container {
+            .inputs-container {
+                .temperature-input-container {
                     width: 45%;
 
                     input {
-                            width: initial;
+                        width: initial;
                     }
                 }
             }
