deleted needless div

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@ $second-color : #323232;
     box-sizing: border-box;
 }
 
-.app {
+body {
     min-height: 100vh;
     background: linear-gradient(118.29deg, #DBE5FF -1.86%, #91AFFB 55.59%, #E3EBFF 102.19%);
     font-family: $font-family_1;
