fixed bad css selector

--- a/src/App.scss
+++ b/src/App.scss
@@ -206,7 +206,7 @@ body {
 
 
 @media screen and (max-width: 450px) {
-    .app {
+    body {
         .weather-container {
             min-width: 90%;
             width: 90%;
